IE9 Video Issue Fix.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="https://sudhakarkt.github.io/NBO_Staging/css/en/Mobile.owl.theme.default.min.css">
 
     <!-- Custom  CSS -->
-    <link rel="stylesheet" href="css/en/functional.css"/>
-    <link rel="stylesheet" href="css/en/main.css">
+    <link rel="stylesheet" href="https://sudhakarkt.github.io/NBO_Staging/css/en/functional.css"/>
+    <link rel="stylesheet" href="https://sudhakarkt.github.io/NBO_Staging/css/en/main.css">
     <link rel="stylesheet" href="https://sudhakarkt.github.io/NBO_Staging/css/en/animate.css">
     <link rel="stylesheet" href="https://sudhakarkt.github.io/NBO_Staging/css/en/responsive-nav.css">
     <link rel="stylesheet" href="https://sudhakarkt.github.io/NBO_Staging/css/en/responsive.css">
